# foai

./: .gcloudignore.hermes  .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  DEPENDENCY_AUDIT.md  INFRASTRUCTURE.md  PLATFORM_DELTA_AUDIT.md  README.md  deploy-key.pub
chicken-hawk/shield-policy/: .gitattributes  CLOUD_BUILD.md  Cargo.toml  README.md  SUBSTRATE_HETEROGENEITY.md  cloudbuild.yaml
chicken-hawk/shield-policy-wire/: .gitignore  Cargo.toml  README.md  regenerate.sh
chicken-hawk/shield-policy-wire/src/: convert.rs  lib.rs  owned.rs
chicken-hawk/shield-policy-wire/tests/: owned_roundtrip.rs  parity.rs  roundtrip.rs
chicken-hawk/shield-policy/SESSIONS/: 2026-04-17-to-19.md
chicken-hawk/shield-policy/scripts/: per-substrate-sign.sh  substrate-repro-check.sh  verify-substrates.sh
chicken-hawk/shield-policy/src/: cia.rs  degradation.rs  kani_harnesses.rs  kernel.rs  lib.rs  phoenix.rs  snr.rs  types.rs  zkp.rs
chicken-hawk/shield-policy/src/hawks/: lil_doubt_hawk.rs  lil_mast_hawk.rs  lil_peel_hawk.rs  lil_scope_hawk.rs  lil_seal_hawk.rs  mod.rs
chicken-hawk/shield-policy/src/squads/: black.rs  blue.rs  gold_platinum.rs  mod.rs  purple.rs  white.rs
forge/: README.md  __init__.py  pyproject.toml  runtime.py  schema.py  smelt-ingot.yaml
forge/adapters/: __init__.py  base.py  claw_code.py  codex_cli.py  gemini_cli.py
forge/chronicle/: __init__.py  charter.py  ledger.py
forge/cli/: __init__.py  forge.py
forge/core/: __init__.py  dag.py  runtime.py  schema.py  state.py
forge/gates/: __init__.py  five_gate.py  leanstral.py
forge/hawks/: __init__.py  chronicle_hawk.py  exec_hawk.py  gate_hawk.py  plan_hawk.py  worktree_hawk.py
forge/isolation/: __init__.py  worktree.py
forge/server/: __init__.py  api.py
forge/tests/integration/: test_perform_wire.py
forge/tests/unit/: test_adapters.py  test_api.py  test_chronicle.py  test_cli.py  test_dag.py  test_gates.py  test_hawks.py  test_runtime.py  test_schema.py  test_worktree.py
forge/workflows/: chronicle-pr.yaml  leanstral-verify.yaml  perform-wire.yaml  refactor-safely.yaml  smelt-ingot.yaml
runtime/chronicle/: README.md  README_zh.md  SANITIZATION.md  SOURCE.md  pyproject.toml  timeline.py
runtime/chronicle/app/a2a/: __init__.py  __main__.py  agent.py  agent_executor.py  config.py
runtime/chronicle/app/services/: timeline_orchestrator.py
runtime/chronicle/app/services/llm_providers/: openai_client.py
runtime/chronicle/app/services/progress/: __init__.py  a2a_progress_callback.py  dual_progress_callback.py
runtime/dspy/: .gitignore  avva_noon.py  pyproject.toml
runtime/dspy/reflexion/: failures.jsonl
runtime/dspy/tests/: test_avva_noon.py
runtime/spinner-policy/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  service.yaml
runtime/spinner-policy/src/: lib.rs  main.rs
runtime/spinner-policy/tests/: http.rs
runtime/vault-signer/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  service.yaml
runtime/vault-signer/scripts/: provision-kms-keys.sh
runtime/vault-signer/src/vault_signer/: __init__.py  auth.py  kms.py  main.py
runtime/vault-signer/tests/: conftest.py  test_auth.py  test_sign.py
smelter-os/sqwaadrun/: .gitignore  Dockerfile  cloudbuild.yaml  pyproject.toml
smelter-os/sqwaadrun/data/: .gitkeep  cfb_2026_rosters.json  cfb_player_index.json  drafttek_board.json  espn_stats.json  fcs_roster_urls.txt  roster_urls.txt
smelter-os/sqwaadrun/data/college-football/: coaches-scrape-log.txt  full-manifest.json  manifest.json  scrape-log.txt
smelter-os/sqwaadrun/data/college-football/coaches/: usa-today-all-coaches-salaries.md  usa-today-all-coaches-salaries.meta.json  usa-today-coaches-salaries.md  usa-today-coaches-salaries.meta.json
smelter-os/sqwaadrun/data/college-football/coaches-contacts/: alabama-coaching-staff.md  alabama-coaching-staff.meta.json  arizona-coaching-staff.md  arizona-coaching-staff.meta.json  arizona-state-coaching-staff.md  arizona-state-coaching-staff.meta.json  baylor-coaching-staff.md  baylor-coaching-staff.meta.json  boise-state-coaching-staff.md  boise-state-coaching-staff.meta.json  california-coaching-staff.md  california-coaching-staff.meta.json  coaches-manifest.json  colorado-coaching-staff.md  colorado-coaching-staff.meta.json  contacts-summary.json  duke-coaching-staff.md  duke-coaching-staff.meta.json  espn-all-coaches-salaries.md  espn-all-coaches-salaries.meta.json  espn-cfb-rankings.md  espn-cfb-rankings.meta.json  florida-coaching-staff.md  florida-coaching-staff.meta.json  florida-state-coaching-staff.md  florida-state-coaching-staff.meta.json  georgia-coaching-staff.md  georgia-coaching-staff.meta.json  kansas-state-coaching-staff.md  kansas-state-coaching-staff.meta.json  kentucky-coaching-staff.md  kentucky-coaching-staff.meta.json  louisville-coaching-staff.md  louisville-coaching-staff.meta.json  lsu-coaching-staff.md  lsu-coaching-staff.meta.json  miami-coaching-staff.md  miami-coaching-staff.meta.json  michigan-coaching-staff.md  michigan-coaching-staff.meta.json  (+48 more)
smelter-os/sqwaadrun/data/college-football/headlines/: athletic-cfb-headlines.md  athletic-cfb-headlines.meta.json  espn-cfb-headlines.md  espn-cfb-headlines.meta.json  espn-cfb.md  (+3 more)
smelter-os/sqwaadrun/deploy/: .sqwaadrun-deploy.env.example  BACKEND_WIRING.md  TRAEFIK_SQWAADRUN_DOMAIN.md  create-gcs-buckets.sh  deploy-master.sh  env.example  provision.sh  sqwaadrun.service  startup.sh
smelter-os/sqwaadrun/migrations/: 001_sqwaadrun_staging.sql  003_acheevy_skills.sql  004_personality_enrichment.sql  005_sqwaadrun_api_keys.sql  006_processed_stripe_events.sql
smelter-os/sqwaadrun/scripts/: live-sports-tracker.py  scrape-2026-big-board.py  scrape-all-cfb.py  scrape-cfb-coaches-contacts.py  scrape-nfl-teams.py
smelter-os/sqwaadrun/sqwaadrun/: __init__.py  acheevy_skills.py  billing_middleware.py  general_ang.py  lil_scrapp_hawk.py  security.py  service.py  skill_router.py  sqwaadrun_hawks.json  storage.py  trcc_jobs.py  trcc_pipeline.py
smelter-os/sqwaadrun/tests/: test_general_ang.py  test_skill_router.py  test_trcc_parser.py
(+4567 files in other folders)
