[project]
name = "common-chronicle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # -- Core Web Framework --
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "websockets==15.0.1",
    # -- Database & ORM --
    "sqlalchemy==2.0.40",
    "alembic==1.16.1",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "pgvector==0.4.1",
    # -- LLM & AI Services --
    "openai",
    "google-genai==1.16.1",
    "sentence_transformers==4.1.0",
    "transformers==4.51.3",
    "xformers==0.0.31",
    # -- Machine Learning & Scientific Computing --
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    # -- HTTP Clients & Web Scraping --
    "requests",
    "beautifulsoup4",
    "httpx",
    "httpx[http2]",
    # -- Authentication & Security --
    "bcrypt==4.3.0",
    "python-jose[cryptography]==3.5.0",
    # -- Configuration & Utilities --
    "python-dotenv==1.1.0",
    "pydantic-settings==2.10.1",
    "python-dateutil==2.9.0",
    "async-lru==2.0.5",
    # -- MCP Server --
    "fastmcp==2.10.6",
    "pre-commit>=4.2.0",
]

[project.optional-dependencies]
# Development tools and code quality
dev = [
    "black>=23.11.0",
    "mypy>=1.7.1",
    "ruff>=0.1.8",
    "pre-commit==4.2.0",
]

# Type stubs for mypy
types = [
    "types-python-jose",
    "types-requests",
    "types-PyYAML",
    "types-beautifulsoup4",
    "types-setuptools",
    "types-sqlalchemy",
    "types-passlib",
]

# Testing framework
test = [
    "pytest",
    "pytest-asyncio",
]

# A2A Protocol integration
a2a = [
    "a2a-sdk[http-server]>=0.1.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.24.0",
    "jinja2>=3.1.0",
]

# All development dependencies (dev + types + test)
all-dev = [
    "common-chronicle[dev,types,test]",
]

# All optional dependencies
all = [
    "common-chronicle[dev,types,test,a2a]",
]
