[project]
name = "avva-noon-reasoning"
version = "1.0.0"
description = "AVVA NOON reasoning spine — DSPy signatures for Simple/Deep/Heavy modes"
requires-python = ">=3.10"
dependencies = [
    "dspy==3.1.3",
    "psycopg2-binary>=2.9.9",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
